<resources>
    <string name="app_name">ToDo_List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">search</string>
    <string name="sort_by">sort_by</string>
    <string name="priority_high">priority_high</string>
    <string name="priority_low">priority_low</string>
    <string name="delete_all">delete_all</string>
    <string name="add">Add</string>
    <string name="save">save</string>
    <string name="delete">Delete</string>
    <string-array name="priorities">
    <item>High Priority</item>
    <item>Medium Priority</item>
    <item>Low Priority</item>
        </string-array>
</resources>